core.example/traefik-dashboard/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https
  labels:
    app.kubernetes.io/name: traefik-dashboard-https
    app.kubernetes.io/component: ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: 'Host(`traefik.ch1.deepsquare.run`)'
      kind: Rule
      middlewares:
        - name: redirect-dashboard
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik.ch1.deepsquare.run-secret
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-http
  labels:
    app.kubernetes.io/name: traefik-dashboard-http
    app.kubernetes.io/component: ingress-route
spec:
  entryPoints:
    - web
  routes:
    - match: 'Host(`traefik.ch1.deepsquare.run`)'
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: noop@internal
          kind: TraefikService
